# FasterTransformer

examples/cpp/: CMakeLists.txt
examples/cpp/gpt/: gpt_config.ini
examples/cpp/nllb_moe/: CMakeLists.txt  input_ids.txt  nllb_moe_config.ini  nllb_moe_example.cc
examples/pytorch/nllb_moe/utils/: huggingface_nllb_moe_convert.py
src/fastertransformer/kernels/: CMakeLists.txt  nllb_moe_kernels.cu  nllb_moe_kernels.h
src/fastertransformer/models/: CMakeLists.txt
src/fastertransformer/models/nllb_moe/: CMakeLists.txt  nllb_moe.cc  nllb_moe.h  nllb_moe_decoder.cc  nllb_moe_decoder.h  nllb_moe_decoder_weight.cc  nllb_moe_decoder_weight.h  nllb_moe_encoder.cc  nllb_moe_encoder.h  nllb_moe_encoder_weight.cc  nllb_moe_encoder_weight.h  nllb_moe_sinusoidal_positional_embedding_weight.cc  nllb_moe_sinusoidal_positional_embedding_weight.h  nllb_moe_utils.h  nllb_moe_weight.cc  nllb_moe_weight.h
